<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background">

	<LinearLayout
		style="@style/Layout"
		android:orientation="vertical">

		<LinearLayout
			style="@style/Layout.SettingsHeader"
			android:orientation="vertical">

			<RelativeLayout style="@style/Layout">

				<TextView
					style="@style/TextView.AppSettingsTitle"
					android:drawableLeft="@drawable/ic_gridwichterle"
					android:text="@string/app_name" />


				<Switch android:id="@+id/gridSwitch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_alignParentRight="true"/>

			</RelativeLayout>


			<TextView
				style="@style/TextView.AppSettingsDesc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/settings_desc"
				android:layout_marginTop="@dimen/grid4" />

		</LinearLayout>

		<View style="@style/TurquoiseLine" />

		<LinearLayout
			style="@style/Layout.Settings"
			android:orientation="vertical">

			<TextView
				style="@style/TextView.SettingHeader"
				android:text="@string/setting_header_grid" />

			<View style="@style/GrayLine.Header" />


			<RelativeLayout style="@style/Layout.SettingsItem">

				<LinearLayout
					android:id="@+id/layoutSeekDesc"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:orientation="vertical">

					<TextView
						style="@style/TextView.SettingTitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/size" />

					<TextView
						android:id="@+id/txtGridSize"
						style="@style/TextView.SettingDesc" />

				</LinearLayout>

				<SeekBar
					android:id="@+id/seekBar"
					android:progress="4"
					android:max="28"
					android:layout_centerVertical="true"
					android:layout_toRightOf="@+id/layoutSeekDesc"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" />

			</RelativeLayout>

			<View style="@style/GrayLine" />

			<RelativeLayout
				android:id="@+id/layoutColor"
				style="@style/Layout.SettingsItem"
				android:gravity="center_vertical">

				<TextView
					style="@style/TextView.SettingTitle"
					android:text="@string/settings_choose_color"
					android:layout_centerVertical="true" />

				<View
					android:id="@+id/viewColor"
					android:layout_width="@dimen/grid5"
					android:layout_height="@dimen/grid5"
					android:layout_alignParentRight="true"
					android:background="@color/gray"
					android:layout_gravity="center" />

			</RelativeLayout>

			<View style="@style/GrayLine" />

			<CheckedTextView
				android:id="@+id/chckFullScreen"
				style="@style/CheckedTextView"
				android:gravity="center_vertical"
				android:text="@string/settings_full_screen" />

			<View style="@style/GrayLine" />

			<TextView
				style="@style/TextView.SettingHeader"
				android:layout_marginTop="24dp"
				android:text="@string/setting_header_about" />

			<View style="@style/GrayLine.Header" />

			<LinearLayout
				android:id="@+id/layoutDevelopers"
				style="@style/Layout.SettingsItem"
				android:orientation="vertical">

				<TextView
					style="@style/TextView.SettingTitle"
					android:text="@string/author" />

				<TextView
					style="@style/TextView.SettingDesc"
					android:text="@string/inmite_developers" />

			</LinearLayout>

			<View style="@style/GrayLine" />

			<TextView
				android:id="@+id/txtTheCode"
				style="@style/TextView.SettingTitle.Row"
				android:text="@string/settings_the_code" />

			<View style="@style/GrayLine" />

			<TextView
				android:id="@+id/txtSendFeedback"
				style="@style/TextView.SettingTitle.Row"
				android:text="@string/settings_send_feedback" />

			<View style="@style/GrayLine" />

			<LinearLayout
				style="@style/Layout.SettingsItem"
				android:orientation="vertical">

				<TextView
					style="@style/TextView.SettingTitle"
					android:text="@string/version" />

				<TextView
					android:id="@+id/txtVersion"
					style="@style/TextView.SettingDesc" />

			</LinearLayout>

			<View style="@style/GrayLine" />

			<LinearLayout
				style="@style/Layout.SettingsItem"
				android:orientation="vertical">

				<TextView
					style="@style/TextView.SettingTitle"
					android:text="@string/settings_wichterle_question" />

				<TextView
					style="@style/TextView.SettingDesc"
					android:text="@string/settings_wichterle_desc" />

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>
</ScrollView>