<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

	<ScrollView
		android:id="@+id/layoutSettings"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			style="@style/LayoutSettings"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/TextTitle"
				android:text="@string/setting_title" />

			<RelativeLayout
				android:layout_marginTop="@dimen/grid2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<SeekBar
					android:id="@+id/seekBar"
					style="@style/SeekbarHolo"
					android:progress="8"
					android:max="32"
					android:layout_centerVertical="true"
					android:layout_toLeftOf="@+id/edtSize"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" />

				<EditText
					android:id="@+id/edtSize"
					android:hint="@string/hint"
					style="@style/EditTextSize"
					android:layout_centerVertical="true"
					android:layout_alignParentRight="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

			</RelativeLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center_vertical"
				android:layout_marginTop="@dimen/grid2">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/TextChooseColor"
					android:text="@string/settings_choose_color"
					android:layout_centerVertical="true" />

				<FrameLayout
					android:id="@+id/btnColor"
					android:layout_alignParentRight="true"
					android:layout_marginLeft="@dimen/grid1"
					android:layout_width="80dp"
					android:layout_height="50dp"
					android:background="@color/gray">

					<View
						android:id="@+id/colorView"
						android:layout_width="77dp"
						android:layout_height="47dp"
						android:layout_gravity="center" />

				</FrameLayout>

			</RelativeLayout>

			<CheckBox
				android:id="@+id/chckFullScreen"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/grid1"
				android:text="@string/settings_full_screen" />

		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		android:layout_marginRight="@dimen/grid2"
		android:layout_marginLeft="@dimen/grid2"
		android:layout_marginBottom="@dimen/grid2">

		<Button
			android:id="@+id/btnClose"
			android:text="@string/settings_close"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />

		<Button
			android:id="@+id/btnGenerate"
			android:text="@string/settings_save"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />

	</LinearLayout>

</merge>

