<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_centerVertical="true"
		android:layout_toLeftOf="@+id/btnSettings"
		android:layout_alignParentLeft="true">

		<TextView
			android:id="@+id/txtTitle"
			style="@style/NotificationText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/notification_title" />

		<TextView
			android:id="@+id/txtDesc"
			style="@style/NotificationText.Desc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/notification_desc" />
	</LinearLayout>


	<Button
		android:id="@+id/btnSettings"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_margin="@dimen/grid1"
		android:text="@string/cancel_grid"
		android:layout_alignParentRight="true" />


</RelativeLayout>