<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

	<ScrollView
		android:id="@+id/layoutColorSettings"
		android:visibility="gone"
		android:background="@color/background"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:orientation="vertical"
			android:gravity="center_horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:background="@color/background">

			<com.larswerkman.colorpicker.ColorPicker
				android:id="@+id/picker"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/TextDesc"
				android:text="@string/settings_transparency" />

			<com.larswerkman.colorpicker.OpacityBar
				android:id="@+id/opacitybar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<LinearLayout
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_marginTop="@dimen/grid2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<Button
					android:id="@+id/btnWhite"
					android:background="@drawable/bg_btn_white"
					android:text="@string/white"
					android:padding="16dp"
					android:textColor="@android:color/black"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<Button
					android:id="@+id/btnBlack"
					android:text="@string/black"
					android:padding="16dp"
					android:layout_marginLeft="8dp"
					android:textColor="@android:color/white"
					android:background="@drawable/bg_btn_black"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

			</LinearLayout>

			<Button
				android:id="@+id/btnSetColor"
				android:text="@string/settings_set_color"
				android:layout_marginTop="@dimen/grid2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</LinearLayout>

	</ScrollView>

</merge>